fix responsive spacing on hero banner

--- a/pegasus/sites.v3/code.org/public/css/page/music-styles.scss
+++ b/pegasus/sites.v3/code.org/public/css/page/music-styles.scss
@@ -42,6 +42,10 @@ section.hero-banner-basic {
   .wrapper {
     position: relative;
     z-index: 10;
+
+    @media screen and (max-width: $width-md) {
+      gap: 2rem;
+    }
   }
 
   p.has-icon {
